--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,26 @@
 name: Deploy to Heroku
 
 on:
-  workflow_dispatch:
-    inputs:
-      apiKey:
-        description: "Heroku API key"
-        required: true
-      appName:
-        description: "Name of heroku app"
-        required: true
-      herokuEmail:
-        description: "Heroku account email"
-        required: true
+    workflow_dispatch:
+        inputs:
+            apiKey:
+                description: 'Heroku API key'
+                required: true
+            appName:
+                description: 'Name of heroku app'
+                required: true
+            herokuEmail:
+                description: 'Heroku account email'
+                required: true
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.4.6
-        with:
-          heroku_api_key: ${{github.event.inputs.apiKey}}
-          heroku_app_name: ${{github.event.inputs.appName}}
-          heroku_email: ${{github.event.inputs.herokuEmail}}
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - uses: akhileshns/heroku-deploy@v3.4.6
+              with:
+                  heroku_api_key: ${{github.event.inputs.apiKey}}
+                  heroku_app_name: ${{github.event.inputs.appName}}
+                  heroku_email: ${{github.event.inputs.herokuEmail}}
+                  appdir: 'backend' # <- This will point to the api folder in your project
